--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -3,41 +3,69 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:paddingTop="5dp"
-    android:paddingBottom="5dp"
-    android:paddingLeft="2dp"
-    android:paddingRight="2dp"
-    android:padding="16dp"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:font="http://schemas.android.com/apk/res/android"
+    card_view:cardUseCompatPadding="true"
+    android:outlineSpotShadowColor="#7A7C7C"
+    android:outlineAmbientShadowColor="@color/black"
+    card_view:cardBackgroundColor="@color/black"
+    android:layout_margin="6dp"
+    android:layout_marginBottom="2dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="5dp">
+        >
+        <FrameLayout
+            android:layout_width="0dp"
+            android:id="@+id/frame"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/image_item"
             android:layout_width="match_parent"
-            android:scaleType="centerCrop"
+            android:scaleType="fitXY"
             android:layout_height="200dp"
-            tools:src="@drawable/ic_launcher_foreground" />
-
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/ic_launcher_background"
+            />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_gravity="bottom"
+            android:background="@drawable/gradient_transparent_black"
+            android:clickable="false" />
+        </FrameLayout>
         <TextView
             android:id="@+id/news_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="2"
+            android:textSize="20sp"
             android:ellipsize="end"
-            android:layout_below="@id/image_item"
+            android:textColor="#f2f2f2"
             android:layout_weight="1"
+            card_view:layout_constraintTop_toTopOf="@+id/frame"
+            android:layout_marginTop="125dp"
+            android:layout_marginBottom="15dp"
             tools:text="NEWS TITLE" />
+
         <TextView
             android:layout_width="match_parent"
             android:id="@+id/author"
             tools:text="Author"
+            android:textSize="12sp"
+            android:layout_marginTop="10dp"
+            android:textColor="#bababa"
+            card_view:layout_constraintTop_toBottomOf="@+id/news_item"
+            card_view:layout_constraintBottom_toBottomOf="@+id/frame"
+            android:layout_marginBottom="5dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/news_item"
             />
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
