--- a/app/src/main/res/layout/activity_news__information.xml
+++ b/app/src/main/res/layout/activity_news__information.xml
@@ -16,16 +16,18 @@
         android:id="@+id/information_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:scaleType="centerCrop"
         tools:srcCompat="@drawable/ic_launcher_background"
         />
     <ImageButton
-        android:layout_width="wrap_content"
+        android:layout_width="42dp"
         android:id="@+id/back_btn"
-        android:layout_height="wrap_content"
+        android:layout_height="42dp"
         android:padding="5dp"
+
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:src="@drawable/ic_action_name"
@@ -45,25 +47,58 @@
         android:text="TextView"
         android:textColor="#f2f2f2"
         android:textSize="20sp"
+        android:gravity="center"
         android:typeface="monospace"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/information_author"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginBottom="75dp"
+        android:layout_marginBottom="55dp"
         />
+
     <TextView
         android:id="@+id/information_author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
         android:text="TextView"
         android:textColor="#bababa"
+        android:layout_marginLeft="10dp"
+        app:layout_constraintBottom_toTopOf="@id/description"
         android:textSize="20sp"
         android:typeface="monospace"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/information_title"
+        />
+
+    <TextView
+        android:id="@+id/Date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="date"
+        app:layout_constraintBottom_toTopOf="@id/description"
+        android:layout_marginRight="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/description"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/url_btn"
+        android:gravity="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="30dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/url_btn"
+        android:text="READ FULL ARTICLE"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
