--- a/app/src/main/res/layout/activity_news__main.xml
+++ b/app/src/main/res/layout/activity_news__main.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/news_main"
     android:background="#464646"
     tools:context=".News_Main">
 
