--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -48,6 +48,7 @@
             android:textSize="20sp"
             android:ellipsize="end"
             android:textColor="#f2f2f2"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
             card_view:layout_constraintTop_toTopOf="@+id/frame"
             android:layout_marginTop="125dp"
@@ -55,17 +56,36 @@
             tools:text="NEWS TITLE" />
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:id="@+id/author"
             tools:text="Author"
+            android:textSize="12sp"
+            android:text="AUTHOR"
+            android:layout_marginTop="10dp"
+            android:textColor="#bababa"
+            android:layout_marginLeft="5dp"
+            card_view:layout_constraintTop_toBottomOf="@+id/news_item"
+            card_view:layout_constraintBottom_toBottomOf="@+id/frame"
+            card_view:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="5dp"
+            android:layout_height="wrap_content"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:id="@+id/item_date"
+            tools:text="Date"
+            android:inputType="date"
+            android:layout_marginLeft="10dp"
             android:textSize="12sp"
             android:layout_marginTop="10dp"
             android:textColor="#bababa"
             card_view:layout_constraintTop_toBottomOf="@+id/news_item"
             card_view:layout_constraintBottom_toBottomOf="@+id/frame"
+            card_view:layout_constraintStart_toEndOf="@id/author"
             android:layout_marginBottom="5dp"
             android:layout_height="wrap_content"
             />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
